--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 </footer>
 
 <a href="#home" class="btt" id="btt"><i class="fas fa-arrow-up"></i></a>
-<a href="https://wa.me/YOURPHONE?text=Hi%20Nupur!%20I%20visited%20NupurAIArts%20💜" target="_blank" class="wab"><i class="fab fa-whatsapp"></i></a>
+<a href="https://wa.me/+918591900693?text=Hi%20Nupur!%20I%20visited%20NupurAIArts%20💜" target="_blank" class="wab"><i class="fab fa-whatsapp"></i></a>
 <div class="tst" id="tst"></div>
 
 <!-- HIDDEN ADMIN LOGIN -->
@@ -563,7 +563,7 @@
 
 <script>
 // ========== CONFIG ==========
-const WA_DEFAULT = 'YOURPHONE'; // ← APNA WHATSAPP NUMBER DALO
+const WA_DEFAULT = '+918591900693'; // ← APNA WHATSAPP NUMBER DALO
 const D={g(k){try{return JSON.parse(localStorage.getItem('n_'+k))||[]}catch(e){return[]}},s(k,d){localStorage.setItem('n_'+k,JSON.stringify(d))},g1(k){return localStorage.getItem('n_'+k)},s1(k,v){localStorage.setItem('n_'+k,v)}};
 function gc(){return{u:D.g1('u')||'nupur',p:D.g1('p')||'nupur2025'}}
 function getWA(){return D.g1('wa')||WA_DEFAULT}
@@ -663,3 +663,4 @@ rf();
 </script>
 </body>
 </html>
+
